@@ -1,3 +1,8 @@
+2008-05-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/native_effects/PicmixEffect.cpp: fix aspect ratio,
+	improve compatibility with existing picmix config files.
+
 2008-05-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/native_effects/PicmixEffect.cpp: first crude but working
